--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,104 +1,90 @@
 .my-experience h2 {
-    font-size: 45px;
-    font-weight: 700;
-    text-align: center;
-    color: #000;
-  }
-  
-  .my-experience p {
-    color: #000;
-    font-size: 18px;
-    letter-spacing: 0.8px;
-    line-height: 1.5em;
-  }
-  
-  .my-experience h3 {
-    color: #000;
-    text-align: end;
-    font-size: 24px;
-    letter-spacing: 0.8px;
-    font-weight: bold;
-    line-height: 1.5em;
-  }
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+  color: #000;
+}
 
-  .boldCompany {
-    text-align: end;
-    font-weight: bold;
-  }
-  
-  .my-experience h4 {
+.my-experience p {
+  color: #000;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+}
 
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .company-logo {
-    margin-top: 15px;
-    position: relative;
-    margin-bottom: 24px;
-  
-    max-width: 100%; /* Ensure the image does not exceed its container width */
-    height: auto; /* Maintain the aspect ratio of the image */
-  }
-  
-  .company-logo img {
-    width: 100%;
-  
-    border-radius: 30px;
-  }
-  
-  .company-logo::before {
-    border-radius: 30px;
-    content: "";
-    background: linear-gradient(90.21deg, #47B5FF -5.91%, #1363DF 111.58%);
-    opacity: 0.85;
-    position: absolute;
-    width: 100%;
-    height: 0;
-    transition: 0.6s ease-in-out;
-  }
-  
-  .company-logo:hover::before {
-    height: 100%;
-  }
-  
-  .logo-hover {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: 0.7s ease-in-out;
-    opacity: 0;
-    width: 100%;
-  }
-  
-  .company-logo:hover .logo-hover {
-    top: 50%;
-    opacity: 1;
-  }
-  
-  .logo-hover h4 {
-    font-size: 22px;
-    font-weight: 700;
-    letter-spacing: 0.8px;
-    line-height: 1.1em;
-  }
-  
-  
-  /* .company-logo img {
-    width: 360px;
-  } */
-  
-  /* Add additional styling to maintain spacing */
-  .my-experience .company-details {
-    width: 96%;
-    padding: 0 0; /* Adjust as needed */
-  }
-  
-  /* Add media query for smaller screens */
-  /* @media (max-width: 768px) {
-    .company-logo {
-      text-align: center;
-    }
-  } */
+.my-experience h3 {
+  color: #000;
+  text-align: end;
+  font-size: 24px;
+  letter-spacing: 0.8px;
+  font-weight: bold;
+  line-height: 1.5em;
+}
+
+.boldCompany {
+  text-align: end;
+  font-weight: bold;
+}
+
+.my-experience h4 {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.company-logo {
+  margin-top: 15px;
+  position: relative;
+  margin-bottom: 24px;
+
+  max-width: 100%;
+  height: auto;
+}
+
+.company-logo img {
+  width: 100%;
+
+  border-radius: 30px;
+}
+
+.company-logo::before {
+  border-radius: 30px;
+  content: "";
+  background: linear-gradient(90.21deg, #47b5ff -5.91%, #1363df 111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.6s ease-in-out;
+}
+
+.company-logo:hover::before {
+  height: 100%;
+}
+
+.logo-hover {
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.7s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+
+.company-logo:hover .logo-hover {
+  top: 50%;
+  opacity: 1;
+}
+
+.logo-hover h4 {
+  font-size: 22px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+}
+
+.my-experience .company-details {
+  width: 96%;
+  padding: 0 0;
+}
