--- a/src/components/organization/organization.css
+++ b/src/components/organization/organization.css
@@ -30,8 +30,8 @@
   position: relative;
   margin-bottom: 24px;
 
-  max-width: 100%; /* Ensure the image does not exceed its container width */
-  height: auto; /* Maintain the aspect ratio of the image */
+  max-width: 100%; 
+  height: auto; 
 }
 
 .company-logo img {
@@ -83,21 +83,9 @@
   font-weight: bold;
 }
 
-
-/* .company-logo img {
-  width: 360px;
-} */
-
-/* Add additional styling to maintain spacing */
 .company-details {
   width: 96%;
   text-align: justify;
-  padding: 0 0; /* Adjust as needed */
+  padding: 0 0; 
 }
 
-/* Add media query for smaller screens */
-/* @media (max-width: 768px) {
-  .company-logo {
-    text-align: center;
-  }
-} */
