--- a/src/components/skill/skill.css
+++ b/src/components/skill/skill.css
@@ -93,7 +93,7 @@
   .skill-slider .item .skill-inner .overlay:hover h5{
     transform: translatex(30px);
     opacity: 0;
-  } */  */
+  } */ 
 
   .background-image-left {
     top: 28%;
