--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@
   font-weight: 400;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Carattere&display=swap');
 
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
 
 *{
   margin: 0;
