--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,7 +9,7 @@ nav.navbar {
 
   nav.navbar.scrolled {
   padding: 20px 0;
-  background-color: aquamarine;
+  background-color: #C69774;
   }
 
   nav.navbar.scrolled .navbar-nav .nav-link.navbar-link {
