--- a/src/components/organization/organization.css
+++ b/src/components/organization/organization.css
@@ -43,7 +43,7 @@
 .company-logo::before {
   border-radius: 30px;
   content: "";
-  background: linear-gradient(90.21deg, #47B5FF -5.91%, #1363DF 111.58%);
+  background: linear-gradient(90.21deg, #fb8b24 -5.91%, #f6b17a 111.58%);
   opacity: 0.85;
   position: absolute;
   width: 100%;
