--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,5 @@
   .about {
-    margin-top: 0;
+    margin-top: 20px;
     padding: 80px 0 100px 0;
     background-position: top center;
     background-size: cover;
@@ -34,6 +34,7 @@
     letter-spacing: 0.8px;
     line-height: 1.5em;
     width: 96%;
+    /* text-align: justify; */
   }
 
   .about a {
