--- a/src/components/achievement/achievement.css
+++ b/src/components/achievement/achievement.css
@@ -43,7 +43,7 @@
   .company-logo::before {
     border-radius: 30px;
     content: "";
-    background: linear-gradient(90.21deg, #47B5FF -5.91%, #1363DF 111.58%);
+    background: linear-gradient(90.21deg, #fb8b24 -5.91%, #f6b17a 111.58%);
     opacity: 0.85;
     position: absolute;
     width: 100%;
@@ -72,10 +72,11 @@
   }
   
   .logo-hover h4 {
-    font-size: 22px;
+    font-size: 23px;
     font-weight: 700;
     letter-spacing: 0.8px;
     line-height: 1.1em;
+    font-weight: bold;
     color: #fff;
   }
   
