--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -16,7 +16,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
-    padding: 130px 0 100px 0;
+    padding: 130px 0 80px 0;
   }
 
   .flex-banner {
@@ -29,34 +29,38 @@
     margin-left: 10px;
     transition: 0.3s ease-in-out;
     line-height: 1;
+    font-weight: bold;
     color: white;
   }
   
   .banner a:hover {
-    color: #000;
+    color: #FB8B24;
   }
   
   .banner a:hover svg {
     margin-left: 25px;
-    color: #000;
+    color: #FB8B24;
 
   }
 
   .left-anim:hover svg {
     margin-right: 50px;
-    color: #000;
+    color: #FB8B24
+  }
 
+  .center-anim:hover svg {
+    color: #FB8B24
   }
     
   @keyframes updown {
     0% {
-        transform: translateY(-20px);
+        transform: translateY(-18px);
     }
     50% {
-        transform: translateY(20px);
+        transform: translateY(18px);
     }
     100% {
-        transform: translateY(-20px);
+        transform: translateY(-18px);
     }
 }
   
