--- a/src/components/license/license.css
+++ b/src/components/license/license.css
@@ -31,7 +31,7 @@
   
   .certificate-item::before {
     content: "";
-    background: linear-gradient(90.21deg, #47B5FF -5.91%, #1363DF 111.58%);
+    background: linear-gradient(90.21deg, #fb8b24 -5.91%, #f6b17a 111.58%);
     opacity: 0.85;
     position: absolute;
     width: 100%;
@@ -48,12 +48,14 @@
     font-weight: 700;
     letter-spacing: 0.8px;
     line-height: 1.1em;
+    color: #fff;
   }
   
   .certif-desc span {
     font-style: italic;
     font-weight: 400;
     font-size: 15px;
+    color: #fff;
     letter-spacing: 0.8px;
   }
 
@@ -63,7 +65,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #F8FAE5;
     display: flex;
     align-items: center;
     justify-content: center;
