--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #F8FAE5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -103,7 +103,7 @@
   position: absolute;
   width: 0;
   height: 100%;
-  background: linear-gradient(90.21deg, #1f4690 -5.91%, #1363df 111.58%);
+  background: linear-gradient(90.21deg, #fb8b24 -5.91%, #f6b17a 111.58%);
   top: 0;
   left: 0;
   z-index: -1;
@@ -203,7 +203,7 @@
 
 .project-container {
   padding: 10px;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   background-color: white;
   padding-bottom: 15px;
 }
