--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -3,13 +3,15 @@
   font-weight: 700;
   text-align: center;
   color: #000;
+  margin-top: 55px;
 }
 
 .my-experience p {
   color: #000;
-  font-size: 18px;
+  font-size: 17px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
+  margin-top: 10px;
 }
 
 .my-experience h3 {
@@ -19,6 +21,7 @@
   letter-spacing: 0.8px;
   font-weight: bold;
   line-height: 1.5em;
+  margin-bottom: 5px;
 }
 
 .boldCompany {
@@ -29,6 +32,7 @@
 .my-experience h4 {
   text-align: center;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .company-logo {
