--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 nav.navbar {
-  padding: 20px 0;
+  padding: 0 0;
   position: fixed;
   width: 100%;
   top: 0;
@@ -8,7 +8,7 @@ nav.navbar {
   }
 
   nav.navbar.scrolled {
-  padding: 20px 0;
+  padding: 0 0;
   background-color: #C69774;
   }
 
@@ -16,10 +16,10 @@ nav.navbar {
     color: #000 !important;
   }
 
-  nav.navbar a.navbar-brand img{
+  /* nav.navbar a.navbar-brand img{
   width: 40px;
   height: 40px;
-  }
+  } */
 
   nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
@@ -28,7 +28,7 @@ nav.navbar {
   padding: 5px 20px;
   font-size: 18px;
   opacity: 0.5;
-  margin-left: 10px;
+  margin-left: 15px;
   display: inline-block;
   position: relative;
   align-items: center;
@@ -97,7 +97,7 @@ nav.navbar {
 
   .social-icon {
     display: inline-block;
-    margin-left: 14px;
+    margin-left: 20px;
   }
 
   .social-icon a {
@@ -106,7 +106,6 @@ nav.navbar {
     background: #000;
     display: inline-flex;
     border-radius: 50%;
-    margin-right: 6px;
     align-items: center;
     justify-content: center;
     line-height: 1;
@@ -118,7 +117,7 @@ nav.navbar {
     width: 42px;
     height: 42px;
     position: absolute;
-    background-color: #ffffff;
+    background-color: #FB8B24;
     border-radius: 50%;
     transform: scale(0);
     transition: 0.3s ease-in-out;
