--- a/src/components/organization/organization.css
+++ b/src/components/organization/organization.css
@@ -3,13 +3,15 @@
   font-weight: 700;
   text-align: center;
   color: #000;
+  margin-top: 15px;
 }
 
 .org-experience p {
   color: #000;
-  font-size: 18px;
+  font-size: 17px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
+  margin-top: 10px;
 }
 
 .org-experience h3 {
@@ -18,18 +20,19 @@
   letter-spacing: 0.8px;
   font-weight: bold;
   line-height: 1.5em;
+  margin-bottom: 5px;
 }
 
 .org-experience h4 {
   text-align: center;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .company-logo {
   margin-top: 15px;
   position: relative;
   margin-bottom: 24px;
-
   max-width: 100%; 
   height: auto; 
 }
@@ -83,9 +86,10 @@
   font-weight: bold;
 }
 
-.company-details {
+.org-experience .company-details {
   width: 96%;
-  text-align: justify;
+  /* text-align: justify; */
   padding: 0 0; 
+  margin-left: 10px;
 }
 
