--- a/src/components/skill/skill.css
+++ b/src/components/skill/skill.css
@@ -8,10 +8,18 @@
     background: none;
     text-align: center;
     margin-top: 50px;
+    background-color: rgba(251, 139, 36, 0.3); /* Warna #fb8b24 dengan opacity 0.5 */
+    /* padding: 60px 0; */
+    padding-top: 55px;
+    padding-bottom: 55px;
+    border-radius: 35px;
+    -webkit-box-shadow:1px 10px 15px #FB8B24;
+    -moz-box-shadow:1px 10px 15px #FB8B24;
+    box-shadow:1px 10px 15px #FB8B24;
   }
 
   .skill h5 {
-    font-weight: 700;
+    font-weight: bold;
     margin: 15px 0;
   }
 
@@ -33,6 +41,7 @@
       letter-spacing: 0.8px;
       line-height: 1.5em;
       margin: 0 0 50px 0;
+      font-weight: 300;
   }
 
   .skill-slider {
@@ -52,54 +61,11 @@
     height: 250px;
   }
 
-  /* .skill-slider .item .skill-item .skill-inner{
-    position: relative;
-    overflow: hidden;
-  }
-
-
-
-  .skill-slider .item .skill-inner:hover img{
-    filter: grayscale(0);
-    transform: scale(1.1);
-  }
-
-  .skill-slider .item .skill-inner .overlay{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 550px;
-    height: 350px;
-    max-width: 100%;
-    background-color: rgba(0,0,0,0.6);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease;
-  }
-
-  .skill-slider .item .skill-inner:hover .overlay{
-    background-color: transparent;
-  }
-
-  .skill-slider .item .skill-inner .overlay:hover h5{
-    color: #ffffff;
-    font-size: 20px;
-    margin: 0;
-    text-align: center;
-    text-transform: capitalize;
-    transition: all 0.5s ease;
-  }
-
-  .skill-slider .item .skill-inner .overlay:hover h5{
-    transform: translatex(30px);
-    opacity: 0;
-  } */ 
-
   .background-image-left {
-    top: 28%;
+    top: 76%;
     position: absolute;
     bottom: 0;
-    width: 40%;
+    right: 5%;
+    width: 360px;
     z-index: -4;
   }
