--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -195,6 +195,7 @@
   margin-bottom: 10px;
   color: #000;
   font-weight: 700;
+  font-size: 20px;
 }
 
 .text-card-wrapper span {
@@ -206,6 +207,9 @@
   /* border-radius: 20px; */
   background-color: white;
   padding-bottom: 15px;
+  -webkit-box-shadow:1px 5px 8px #FB8B24;
+  -moz-box-shadow:1px 5px 8px #FB8B24;
+  box-shadow:1px 5px 8px #FB8B24;
 }
 
 .background-image-right {
