--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,104 +1,103 @@
-  .about {
-    margin-top: 20px;
-    padding: 80px 0 100px 0;
-    background-position: top center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-  }
-
-  .about .tagline {
-    font-weight: 700;
-    letter-spacing: 0.8px;
-    padding: 8px 10px;
-    background: linear-gradient(90.21deg, #1363DF -5.91%, #47B5FF 111.58%);
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    font-size: 20px;
-    margin-bottom: 16px;
-    display: inline-block;
-  }
-
-  .about h1 {
-    font-size: 65px;
-    font-weight: 700;
-    letter-spacing: 0.8px;
-    line-height: 1;
-    margin-bottom: 20px;
-    display: block;
-    color: #000;
-  }
-
-  .about p {
-    color: #000;
-    font-size: 18px;
-    letter-spacing: 0.8px;
-    line-height: 1.5em;
-    width: 96%;
-    /* text-align: justify; */
-  }
-
-  .about a {
-    color: #000;
-    font-weight: 700;
-    font-size: 20px;
-    margin-top: 60px;
-    letter-spacing: 0.8px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    transition: 0.1s ease-in;
-  }
-
-  .about a svg {
-    font-size: 25px;
-    margin-left: 10px;
-    transition: 0.3s ease-in-out;
-    line-height: 1;
-  }
-
-  .about a:hover {
-    color: #000;
-  }
-
-  .about a:hover svg {
-    margin-left: 25px;
-  }
-
-  .about img {
-    animation: rightleft 3s linear infinite;
-    -webkit-box-shadow:2px 10px 15px #354259;
-    -moz-box-shadow:2px 10px 15px #354259;
-    box-shadow:2px 10px 15px #354259;
-  }
-
-  .about .socialBox {
-    color: #fff;
-    font-weight: 700;
-    font-size: 20px;
-    margin-top: 30px;
-    letter-spacing: 0.8px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 10px 10px;
-    width: 60%;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    background-color: rgba(23, 107, 135, 0.5);
-  }
-
-  @keyframes rightleft {
-    0% {
-        transform: translateX(-20px);
-    }
-    50% {
-        transform: translateX(20px);
-    }
-    100% {
-        transform: translateX(-20px);
-    }
+.about {
+  margin-top: 20px;
+  padding: 80px 0 100px 0;
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-  .txt-rotate > .wrap {
-    border-right: 0.08em solid #666;
+.about .tagline {
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  padding: 8px 10px;
+  background: linear-gradient(90.21deg, #1363df -5.91%, #47b5ff 111.58%);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
+.about h1 {
+  font-size: 65px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1;
+  margin-bottom: 20px;
+  display: block;
+  color: #000;
+}
+
+.about p {
+  color: #000;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 96%;
+  text-align: justify;
+}
+
+.about a {
+  color: #000;
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 60px;
+  letter-spacing: 0.8px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.1s ease-in;
+}
+
+.about a svg {
+  font-size: 25px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+}
+
+.about a:hover {
+  color: #000;
+}
+
+.about a:hover svg {
+  margin-left: 25px;
+}
+
+.about img {
+  animation: rightleft 3s linear infinite;
+  -webkit-box-shadow: 2px 10px 15px #354259;
+  -moz-box-shadow: 2px 10px 15px #354259;
+  box-shadow: 2px 10px 15px #354259;
+}
+
+.about .socialBox {
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 30px;
+  letter-spacing: 0.8px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px 10px;
+  width: 60%;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(23, 107, 135, 0.5);
+}
+
+@keyframes rightleft {
+  0% {
+    transform: translateX(-20px);
   }
-  
+  50% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(-20px);
+  }
+}
+
+.txt-rotate > .wrap {
+  border-right: 0.08em solid #666;
+}
