--- a/src/components/achievement/achievement.css
+++ b/src/components/achievement/achievement.css
@@ -16,7 +16,6 @@
 
   .ach-experience {
     text-align: center;
-    /* background-color: red; */
   }
   
   .ach-experience h3 {
@@ -48,7 +47,7 @@
   
   .ach-experience .company-logo img {
     width: 100%;
-    /* height: 360px; */
+    height: 180px;
     border-radius: 30px;
   }
   
