--- a/src/components/organization/organization.css
+++ b/src/components/organization/organization.css
@@ -6,14 +6,14 @@
   margin-bottom: 35px;
 }
 
-.org-experience p {
+.org-experience li {
   color: #000;
   font-size: 17px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   margin-top: 10px;
-  text-align: start;
-
+  text-align: justify;
+  margin-left: 20px;
 }
 
 .org-experience h3 {
