--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -23,12 +23,15 @@
   justify-content: center;
 }
 
-.project-container-overlay p {
+.project-container-overlay li {
   font-style: italic;
   font-weight: 400;
   font-size: 17px;
   letter-spacing: 0.8px;
   margin: 10px;
+  font-weight: 700;
+  margin-left: 35px;
+  text-align: justify;
 }
 
 .overlay-image {
@@ -198,11 +201,6 @@
   font-size: 20px;
 }
 
-.text-card-wrapper p {
-  font-weight: 700;
-  margin-left: 15px;
-  text-align: start;
-}
 
 .text-card-wrapper span {
   font-weight: 700;
