--- a/src/components/achievement/achievement.css
+++ b/src/components/achievement/achievement.css
@@ -1,102 +1,100 @@
 .ach-experience h2 {
-    font-size: 45px;
-    font-weight: 700;
-    text-align: center;
-    color: #000;
-    margin-top: 55px;
-    margin-bottom: 35px;
-  }
-  
-  .ach-experience p {
-    color: #000;
-    font-size: 16px;
-    letter-spacing: 0.8px;
-    line-height: 1.5em;
-  }
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+  color: #000;
+  margin-top: 55px;
+  margin-bottom: 35px;
+}
 
-  .ach-experience {
-    text-align: center;
-  }
-  
-  .ach-experience h3 {
-    color: #000;
-    font-size: 21px;
-    letter-spacing: 0.8px;
-    font-weight: bold;
-    line-height: 1.5em;
-    margin-bottom: 5px;
-  }
+.ach-experience p {
+  color: #000;
+  font-size: 16px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+}
 
-  .ach-experience h5 {
-    margin-bottom: 5px;
-  }
-  
-  .ach-experience h4 {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .ach-experience .company-logo {
-    margin-top: 15px;
-    position: relative;
-    margin-bottom: 24px;
-  
-    max-width: 100%;
-    height: auto; 
-  }
-  
-  .ach-experience .company-logo img {
-    width: 100%;
-    height: 180px;
-    border-radius: 30px;
-  }
-  
-  .company-logo::before {
-    border-radius: 30px;
-    content: "";
-    background: linear-gradient(90.21deg, #fb8b24 -5.91%, #f6b17a 111.58%);
-    opacity: 0.85;
-    position: absolute;
-    width: 100%;
-    height: 0;
-    transition: 0.6s ease-in-out;
-  }
-  
-  .company-logo:hover::before {
-    height: 100%;
-  }
-  
-  .logo-hover {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: 0.7s ease-in-out;
-    opacity: 0;
-    width: 100%;
-  }
-  
-  .company-logo:hover .logo-hover {
-    top: 50%;
-    opacity: 1;
-  }
-  
-  .logo-hover h4 {
-    font-size: 23px;
-    font-weight: 700;
-    letter-spacing: 0.8px;
-    line-height: 1.1em;
-    font-weight: bold;
-    color: #fff;
-  }
-  
-  .bold-company-ach {
-    font-weight: bold;
-  }
-  
-  .company-details {
-    /* width: 96%; */
-    /* text-align: justify; */
-    padding: 0 0
-  }
+.ach-experience {
+  text-align: center;
+}
+
+.ach-experience h3 {
+  color: #000;
+  font-size: 21px;
+  letter-spacing: 0.8px;
+  font-weight: bold;
+  line-height: 1.5em;
+  margin-bottom: 5px;
+}
+
+.ach-experience h5 {
+  margin-bottom: 5px;
+}
+
+.ach-experience h4 {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.ach-experience .company-logo {
+  margin-top: 15px;
+  position: relative;
+  margin-bottom: 24px;
+
+  max-width: 100%;
+  height: auto;
+}
+
+.ach-experience .company-logo img {
+  width: 100%;
+  height: 180px;
+  border-radius: 30px;
+}
+
+.company-logo::before {
+  border-radius: 30px;
+  content: "";
+  background: linear-gradient(90.21deg, #fb8b24 -5.91%, #f6b17a 111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.6s ease-in-out;
+}
+
+.company-logo:hover::before {
+  height: 100%;
+}
+
+.logo-hover {
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.7s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+
+.company-logo:hover .logo-hover {
+  top: 50%;
+  opacity: 1;
+}
+
+.logo-hover h4 {
+  font-size: 23px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+  font-weight: bold;
+  color: #fff;
+}
+
+.bold-company-ach {
+  font-weight: bold;
+}
+
+.company-details {
+  padding: 0 0;
+}
