--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,185 +1,183 @@
 .banner-container {
-    max-width: 300px;
-    max-height: 300px;
-    display: inline-flex;
+  max-width: 300px;
+  max-height: 300px;
+  display: inline-flex;
 
-    position: relative;
-  }
-
-  .banner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-image: url('../../assets/img/bannerWallpaper.jpg');
-    background-position: top center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    /* background-attachment: fixed; */
-    padding: 130px 0 100px 0;
-  }
-
-  .flex-banner {
-    display: flex;
-  }
-
-  .banner a svg {
-    margin: 10px 25px;
-    font-size: 35px;
-    margin-left: 10px;
-    transition: 0.3s ease-in-out;
-    line-height: 1;
-    font-weight: bold;
-    color: white;
-  }
-  
-  .banner a:hover {
-    color: #FB8B24;
-  }
-  
-  .banner a:hover svg {
-    margin-left: 25px;
-    color: #FB8B24;
-
-  }
-
-  .left-anim:hover svg {
-    margin-right: 50px;
-    color: #FB8B24
-  }
-
-  .center-anim:hover svg {
-    color: #FB8B24
-  }
-    
-  @keyframes updown {
-    0% {
-        transform: translateY(-18px);
-    }
-    50% {
-        transform: translateY(18px);
-    }
-    100% {
-        transform: translateY(-18px);
-    }
+  position: relative;
 }
-  
-  .txt-rotate > .wrap {
-    border-right: 0.08em solid #666;
-  }
-  
-  .Resume {
-    width: 160px;
-    height: 35px;
-    border: none;
-    outline: none;
-    transition: ease-out 0.3s;
-    cursor: pointer;
-    font-size: 1.5rem;
-    color: #FB8B24;
-    z-index: 1;
-    font-weight: 400;
-  }
-  
-  .Resume:hover {
-    color: #fff;
-  }
-  .Resume::before {
-    transition: 0.5 all ease;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    right: 50%;
-    bottom: 0;
-    opacity: 0;
-    content: "";
-    background-color: #FB8B24;
-  }
-  .Resume:hover:before {
-    transition: 0.5s all ease;
-    left: 0;
-    right: 0;
-    opacity: 1;
-    z-index: -1;
-  }
 
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-image: url("../../assets/img/bannerWallpaper.jpg");
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  padding: 130px 0 100px 0;
+}
 
-  .Name {
-    /* writing-mode: horizontal-tb !important; */
-    padding: 12px;
-    font-weight: bold;
-    display: flex;
-    height: 20px;
-    justify-content: center;
-  }
-  
-  .period {
-    color: #FB8B24;
-  }
-  .name-box {
-    background-color: #fff;
-    margin: 10px;
-    border-radius: 10px;
-  }
-  
-  .Introduction {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    color: #fff;
-  }
-  .Introduction h1 {
-    font-size: 5rem;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-  .Introduction h2 span {
-    color: #FB8B24;
-    font-size: 3rem;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  .Introduction p {
-    display: flex;
-    flex-wrap: wrap;
-    width: 700px;
-    justify-content: center;
-    text-align: center;
-    margin: 1em 0;
-    line-height: 1.25;
-    padding-left: 70px;
-    padding-right: 70px;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  .Introduction button {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    outline: none;
-    border: none;
-    width: 150px;
-    height: 50px;
-    color: #F8FAE5;
-    font-weight: bold;
-    font-size: 1.3rem;
-    background-color: #FB8B24;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.5s ease-in;
-  }
-  .Introduction button:hover {
-    background-color: #F8FAE5;
-    border: 2px solid #FB8B24;
-    color: #FB8B24;
-    font-weight: bold;
-    -webkit-box-shadow:1px 5px 8px #FB8B24;
-    -moz-box-shadow:1px 5px 8px #FB8B24;
-    box-shadow:1px 5px 8px #FB8B24;
-  }
+.flex-banner {
+  display: flex;
+}
 
-  .Introduction img {
-    margin-top: 50px;
-    width: 32px;
-    animation: updown 3s linear infinite;
+.banner a svg {
+  margin: 10px 25px;
+  font-size: 35px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+  font-weight: bold;
+  color: white;
+}
+
+.banner a:hover {
+  color: #fb8b24;
+}
+
+.banner a:hover svg {
+  margin-left: 25px;
+  color: #fb8b24;
+}
+
+.left-anim:hover svg {
+  margin-right: 50px;
+  color: #fb8b24;
+}
+
+.center-anim:hover svg {
+  color: #fb8b24;
+}
+
+@keyframes updown {
+  0% {
+    transform: translateY(-18px);
   }
+  50% {
+    transform: translateY(18px);
+  }
+  100% {
+    transform: translateY(-18px);
+  }
+}
+
+.txt-rotate > .wrap {
+  border-right: 0.08em solid #666;
+}
+
+.Resume {
+  width: 160px;
+  height: 35px;
+  border: none;
+  outline: none;
+  transition: ease-out 0.3s;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #fb8b24;
+  z-index: 1;
+  font-weight: 400;
+}
+
+.Resume:hover {
+  color: #fff;
+}
+.Resume::before {
+  transition: 0.5 all ease;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: "";
+  background-color: #fb8b24;
+}
+.Resume:hover:before {
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  z-index: -1;
+}
+
+.Name {
+  /* writing-mode: horizontal-tb !important; */
+  padding: 12px;
+  font-weight: bold;
+  display: flex;
+  height: 20px;
+  justify-content: center;
+}
+
+.period {
+  color: #fb8b24;
+}
+.name-box {
+  background-color: #fff;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.Introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  color: #fff;
+}
+.Introduction h1 {
+  font-size: 5rem;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.Introduction h2 span {
+  color: #fb8b24;
+  font-size: 3rem;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.Introduction p {
+  display: flex;
+  flex-wrap: wrap;
+  width: 700px;
+  justify-content: center;
+  text-align: center;
+  margin: 1em 0;
+  line-height: 1.25;
+  padding-left: 70px;
+  padding-right: 70px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.Introduction button {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  outline: none;
+  border: none;
+  width: 150px;
+  height: 50px;
+  color: #f8fae5;
+  font-weight: bold;
+  font-size: 1.3rem;
+  background-color: #fb8b24;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s ease-in;
+}
+.Introduction button:hover {
+  background-color: #f8fae5;
+  border: 2px solid #fb8b24;
+  color: #fb8b24;
+  font-weight: bold;
+  -webkit-box-shadow: 1px 5px 8px #fb8b24;
+  -moz-box-shadow: 1px 5px 8px #fb8b24;
+  box-shadow: 1px 5px 8px #fb8b24;
+}
+
+.Introduction img {
+  margin-top: 50px;
+  width: 32px;
+  animation: updown 3s linear infinite;
+}
