--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,24 +4,24 @@ nav.navbar {
   width: 100%;
   top: 0;
   z-index: 9999;
-  transition:  0.32 ease-in-out;
-  }
+  transition: 0.32 ease-in-out;
+}
 
-  nav.navbar.scrolled {
+nav.navbar.scrolled {
   padding: 12px 0;
-  background-color: #C69774;
-  }
+  background-color: #c69774;
+}
 
-  nav.navbar.scrolled .navbar-nav .nav-link.navbar-link {
-    color: #000 !important;
-  }
+nav.navbar.scrolled .navbar-nav .nav-link.navbar-link {
+  color: #000 !important;
+}
 
-  nav.navbar a.navbar-brand img{
+nav.navbar a.navbar-brand img {
   width: 32px;
   height: 32px;
-  }
+}
 
-  nav.navbar .navbar-nav .nav-link.navbar-link {
+nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
   color: #fff !important;
   letter-spacing: 0.8px;
@@ -36,115 +36,113 @@ nav.navbar {
   color: var(--textcolor);
   transition: color 0.7s ease;
   font-family: "Lilita One", cursive;
+}
 
-  }
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
+nav.navbar .navbar-nav a.nav-link.navbar-link.active {
+  opacity: 1;
+}
 
-  nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
-  nav.navbar .navbar-nav a.nav-link.navbar-link.active {
-    opacity: 1;
-  }
+nav.navbar .navbar-nav .nav-link.navbar-link:hover {
+  color: #ffffff !important;
+}
 
-  nav.navbar .navbar-nav .nav-link.navbar-link:hover {
-    color: #ffffff !important;
-  }
+nav.navbar .navbar-nav a.nav-link.navbar-link:before,
+nav.navbar .navbar-nav a.nav-link.navbar-link:after {
+  display: block;
+  content: "";
+  position: absolute;
+  background: #fb8b24;
+  z-index: -5;
+  border-radius: 10px;
+}
 
-  nav.navbar .navbar-nav a.nav-link.navbar-link:before,
-  nav.navbar .navbar-nav a.nav-link.navbar-link:after {
-    display: block;
-    content: "";
-    position: absolute;
-    background: #FB8B24;
-    z-index: -5;
-    border-radius: 10px;
-  }
-  
-  nav.navbar .navbar-nav a.nav-link.navbar-link:before {
-    top: -0.1rem;
-    bottom: 80%;
-    left: -0.1rem;
-    right: calc(100% + 0.1rem);
-    transition: left 0.5s, right 0.5s, bottom 0.5s;
-  }
-  
-  nav.navbar .navbar-nav a.nav-link.navbar-link:after {
-    top: 80%;
-    bottom: -0.1rem;
-    left: calc(100% + 0.1rem);
-    right: -0.1rem;
-    transition: left 0.5s, right 0.5s, top 0.5s;
-  }
-  
-  nav.navbar .navbar-nav a.nav-link.navbar-link:hover:before {
-    top: -0.1rem;
-    bottom: 0;
-    left: -0.1rem;
-    right: 0;
-  }
-  
-  nav.navbar .navbar-nav a.nav-link.navbar-link:hover:after {
-    top: 0;
-    bottom: -0.1rem;
-    left: 0;
-    right: -0.1rem;
-  }
-  
+nav.navbar .navbar-nav a.nav-link.navbar-link:before {
+  top: -0.1rem;
+  bottom: 80%;
+  left: -0.1rem;
+  right: calc(100% + 0.1rem);
+  transition: left 0.5s, right 0.5s, bottom 0.5s;
+}
 
+nav.navbar .navbar-nav a.nav-link.navbar-link:after {
+  top: 80%;
+  bottom: -0.1rem;
+  left: calc(100% + 0.1rem);
+  right: -0.1rem;
+  transition: left 0.5s, right 0.5s, top 0.5s;
+}
 
-  span.navbar-text {
-    display: flex;
-    align-items: center;
-  }
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover:before {
+  top: -0.1rem;
+  bottom: 0;
+  left: -0.1rem;
+  right: 0;
+}
 
-  .social-icon {
-    display: inline-block;
-    margin-left: 20px;
-  }
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover:after {
+  top: 0;
+  bottom: -0.1rem;
+  left: 0;
+  right: -0.1rem;
+}
 
-  .social-icon a {
-    width: 42px;
-    height: 42px;
-    background: #000;
-    display: inline-flex;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    margin-left: 20px;
-  }
+span.navbar-text {
+  display: flex;
+  align-items: center;
+}
 
-  .social-icon a::before {
-    content: "";
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    background-color: #FB8B24;
-    border-radius: 50%;
-    transform: scale(0);
-    transition: 0.3s ease-in-out;
-  }
+.social-icon {
+  display: inline-block;
+  margin-left: 20px;
+}
 
-  .social-icon a:hover::before {
-    transform: scale(1);
-  }
+.social-icon a {
+  width: 42px;
+  height: 42px;
+  background: #000;
+  display: inline-flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  margin-left: 20px;
+}
 
-  .social-icon a img {
+.social-icon a::before {
+  content: "";
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  background-color: #fb8b24;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
+}
+
+.social-icon a:hover::before {
+  transform: scale(1);
+}
+
+.social-icon a img {
   width: 40%;
   z-index: 1;
   transition: 0.3s ease-in-out;
-  }
+}
 
-  .social-icon a:hover img {
-  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
-  }
+.social-icon a:hover img {
+  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%)
+    hue-rotate(346deg) brightness(95%) contrast(86%);
+}
 
-  nav.navbar .navbar-toggler:active,
-  nav.navbar .navbar-toggler:focus {
+nav.navbar .navbar-toggler:active,
+nav.navbar .navbar-toggler:focus {
   outline: none;
   box-shadow: none;
-  }
+}
 
-  nav.navbar .navbar-toggler-icon {
+nav.navbar .navbar-toggler-icon {
   width: 24px;
   height: 17px;
   background-image: none;
@@ -152,46 +150,46 @@ nav.navbar {
   border-bottom: 2px solid #fff;
   transition: all 300ms linear;
   top: -2px;
-  }
+}
 
-  nav.navbar .navbar-toggler-icon:focus {
+nav.navbar .navbar-toggler-icon:focus {
   border-bottom: 2px solid #fff;
-  }
+}
 
-  nav.navbar .navbar-toggler-icon:after,
-  nav.navbar .navbar-toggler-icon:before {
+nav.navbar .navbar-toggler-icon:after,
+nav.navbar .navbar-toggler-icon:before {
   width: 24px;
   position: absolute;
   height: 2px;
   background-color: #fff;
   top: 0;
   left: 0;
-  content: '';
+  content: "";
   z-index: 2;
   transition: all 300ms linear;
-  }
+}
 
-  nav.navbar .navbar-toggler-icon:after {
+nav.navbar .navbar-toggler-icon:after {
   top: 8px;
-  }
+}
 
-  nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
+nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
   transform: rotate(45deg);
   background-color: #fff;
   height: 2px;
-  }
+}
 
-  nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
+nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
   transform: translateY(8px) rotate(-45deg);
   background-color: #fff;
   height: 2px;
-  }
+}
 
-  nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-color: transparent;
-  }
+}
 
-  .header-brand {
-    font-size: 20px;
-    color: #fff;
-  }
+.header-brand {
+  font-size: 20px;
+  color: #fff;
+}
