--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #F8FAE5;
+  background-color: #f8fae5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -201,7 +201,6 @@
   font-size: 20px;
 }
 
-
 .text-card-wrapper span {
   font-weight: 700;
 }
@@ -211,9 +210,9 @@
   border-radius: 20px;
   background-color: white;
   padding-bottom: 15px;
-  -webkit-box-shadow:1px 5px 8px #FB8B24;
-  -moz-box-shadow:1px 5px 8px #FB8B24;
-  box-shadow:1px 5px 8px #FB8B24;
+  -webkit-box-shadow: 1px 5px 8px #fb8b24;
+  -moz-box-shadow: 1px 5px 8px #fb8b24;
+  box-shadow: 1px 5px 8px #fb8b24;
 }
 
 .background-image-right {
