--- a/src/components/skill/skill.css
+++ b/src/components/skill/skill.css
@@ -1,4 +1,3 @@
-/*Skills*/
 .skill {
   padding: 0 0 50px 0;
   position: relative;
@@ -8,13 +7,7 @@
   background: none;
   text-align: center;
   margin-top: 50px;
-  background-color: rgba(
-    251,
-    139,
-    36,
-    0.3
-  ); /* Warna #fb8b24 dengan opacity 0.5 */
-  /* padding: 60px 0; */
+  background-color: rgba(251, 139, 36, 0.3);
   padding-top: 55px;
   padding-bottom: 55px;
   border-radius: 35px;
